# J2Composer

./: .gitignore  APKBUILD  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
ci/: install_rust.sh
examples/: main.yaml.j2  module.j2  plugin.yaml.j2  variables.yaml.j2
examples/apkbuild/: APKBUILD.j2  APKBuild.j2  README.md  test.sh
examples/dockerfile/: Dockerfile.j2  test.sh  variables.yaml.j2
examples/mlflow/: flavor.yaml.j2  test.sh
examples/scratch/: main.yaml.j2  plugin.yaml.j2  test.sh  variables.yaml.j2
examples/scratch/plugin/: wasm_example.wasm
plugin/src/: lib.rs
plugin_macro/src/: lib.rs
src/: ast.rs  command.rs  error.rs  filter.rs  function.rs  lib.rs  main.rs  plugin.rs  render.rs  shell_plugin.rs  wasm_plugin.rs
tests/: function_tests.rs
wasm_example/: Cargo.toml  README.md
wasm_example/src/: lib.rs
wasm_tester/: Cargo.toml  plugin.yaml
wasm_tester/src/: main.rs
