[package]
name = "jintemplify"
version = "0.1.6"
edition = "2021"
description = "A CLI tool to compose files using Jinja2 templates and YAML variables."
license = "MIT"
repository = "https://github.com/fantajeon/jintemplify"
homepage = "https://github.com/fantajeon/jintemplify"
documentation = "https://github.com/fantajeon/jintemplify"
authors = ["Hyeokjune Jeon <fantajeon@gmail.com>"]
exclude = ["tests/**", "examples/**"]

[[bin]]
name = "jintemplify"
path = "src/main.rs"

[dependencies]
tera = "1"
clap = "4.4.6"
serde_yaml = "0.9.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"


[profile.release]
opt-level = "z" # 최대 크기 최적화
lto = true      # 링크 시간 최적화
