[package]
name = "wasm_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# WebAssembly로 컴파일하기 위한 설정 추가
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
plugin_macro = { path = "../plugin_macro" }
plugin = { path = "../plugin" }
[dev-dependencies]
cargo-expand = "1"
