[package]
name = "wasm_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.8"
wasm-bindgen = "0.2.87"
plugin = { path = "../plugin" }
serde_yaml = "0.9"
maplit = "1.0"
tera = "1"
